# common_msgs

./: .gitignore  MODULE.bazel  README.md
common_msgs/basic_msgs/: BUILD  header.proto
common_msgs/chassis_msgs/: BUILD  BUILD_  chassis.proto  chassis_detail.proto
common_msgs/config_msgs/: BUILD  vehicle_config.proto
common_msgs/sensor_msgs/: BUILD  conti_radar.proto  gnss.proto  imu.proto  ins.proto  nano_radar.proto  oculii_radar.proto  racobit_radar.proto  radar.proto  radarpointcloud.proto  sensor_image.proto  smartereye.proto
scripts/: build.sh  proto_build_generator.py
scripts/tools/: proto_build_generator.py
